bug(developer): fix table alignment in dev history
- fix table alignment in dev history page
- update history cards to render without fellow project

[Fixes #165968510]

--- a/src/components/FellowHistory/FellowHistory.css
+++ b/src/components/FellowHistory/FellowHistory.css
@@ -3,9 +3,11 @@
 }
 @media (min-width: 1600px) {
   .fellow-history {
-    max-width: 80% !important;
     width: 100% !important;
     margin-left: 0 !important;
+  }
+  .fellow-history__top {
+    width: 80% !important;
   }
 }
 
